# optimization_choice_cards

./: CMakeLists.txt  README.md  cards.cpp  cards_9.cpp  cards_9_bloqueado.cpp  deck_rodada3_c.csv  utils.hpp
